refactor: clean backend after passing TDD stages Removed temporary debug code, cleaned controllers, and finalized server and database setup. Used Blackbox AI for final code verification.
Co-authored-by: Blackbox AI <blackbox@ai>

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-# MONGO_URI=mongodb+srv://siddharthrishabh:%40Siddharth2003@mithaighar.axcczqu.mongodb.net/mydatabase
+MONGO_URI=mongodb+srv://siddharthrishabh:%40Siddharth2003@mithaighar.axcczqu.mongodb.net/mydatabase
 ADMIN_EMAILS=siddharthrishabh019@gmail.com
 JWT_SECRET=supersecret
